[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
atoi = "2.0.0"
btoi = "0.4.2"
itertools = "0.10.5"
parse-display = "0.7.0"
rayon = "1.6.0"
regex = "1.7.0"
